# contain

./: Cargo.toml  README.md  build.rs  test.txt
src/: main.rs
src/encryption/: base.rs  file.rs  file_sys_trait.rs  folder.rs  mod.rs  test.txt
src/pages/: encryption_page.rs  error_page.rs  home_page.rs  mod.rs
src/time_manger/: mod.rs  online_sync.rs  test.timelock  test.txt  time_file.rs  time_file_json.rs
ui/: EncryptionPage.slint  MyApp.slint  hello.slint  home.slint
