[package]
name = "contain"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
anyhow = "1.0.81"
const-random = "0.1.17"
generic-array = "1.0.0"
hex = "0.4.3"
home = "0.5.9"
rand = "0.8.5"
reqwest = {version = "0.12.0", features = ["blocking"]}
rfd = "0.14.1"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serial_test = "3.0.0"
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"
