[package]
name = "contain"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
anyhow = "1.0.86"
async-std = "1.12.0"
const-random = "0.1.18"
generic-array = "1.1.0"
hex = "0.4.3"
home = "0.5.9"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = {version = "0.12.5"}
rfd = "0.14.1"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.121"
serial_test = "3.1.1"
slint = "1.7.1"
tokio = {version =  "1.39.2", features = ["full"] }

[build-dependencies]
slint-build = "1.7.1"
